--- a/index.html
+++ b/index.html
@@ -421,36 +421,33 @@
     </div>
 
     <div class="first">
-        <span class="xd">|</span><span>新乡市红旗区耐特网络休闲广场
-</span>
+        <span class="xd">|</span><span>西安梦知都文化娱乐有限公司</span>
     </div>
     <div class="ycxx">
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>编号</span>
-                <span>460300584153</span>
+                <span>610104602035</span>
             </div>
             <div class="ycxx-left">
                 <span>名称</span>
-                <span>新乡市红旗区耐特网络休闲广场
-</span>
+                <span>西安梦知都文化娱乐有限公司</span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>住所</span>
-                <span>新乡市人民路三分区1号楼靖业房产中楼1、2层</span>
+                <span>西安市莲湖区桃园南路辅路与二环南路西段辅路交叉口东北190米</span>
             </div>
             <div class="ycxx-left">
                 <span>法定代表人</span>
-                <span>杜雨龙
-</span>
+                <span>钟玉杰</span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>类型</span>
-                <span>	个人独资企业</span>
+                <span>有限责任公司(自然人独资)</span>
             </div>
             <div class="ycxx-left">
                 <span>单位类别</span>
@@ -464,7 +461,7 @@
             </div>
             <div class="ycxx-left">
                 <span>首次发证日期</span>
-                <span>2025-02-18</span>
+                <span>2025-06-13</span>
             </div>
         </div>
         <div class="ycxx-content">
@@ -486,21 +483,21 @@
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>有效期</span>
-                <span>2024-12-26 至 2026-12-25</span>
+                <span>2025-06-13 至 2027-06-12</span>
             </div>
             <div class="ycxx-left">
                 <span>经营范围</span>
-                <span>提供KTV服务</span>
+                <span>歌舞娱乐场所</span>
             </div>
         </div>
         <div class="ycxx-content">
             <div class="ycxx-left">
                 <span>发证机关</span>
-                <span>新乡市红旗区市场监督管理局</span>
+                <span>西安市莲湖区市场监督管理局</span>
             </div>
             <div class="ycxx-left">
                 <span>发证日期</span>
-                <span>2025-02-18</span>
+                <span>2025-06-13</span>
             </div>
         </div>
     </div>
